<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="action_settings">Settings</string>

    <string name="detail">Detail</string>
    <string name="share">Share</string>
    <string name="title">Title</string>
    <string name="close">Close</string>
    <string name="movies">Movies</string>
    <string name="tv_show">TV Show</string>

    <string name="language">Language</string>
    <string name="change_localization">Change Your Phone Localization</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="poster">Poster</string>
    <string name="logo">Logo</string>

    <string name="favorite">Favorite</string>

    <string name="date">Date</string>
    <string name="overview">Overview</string>
    <string name="this_is_content">This is Content</string>
    <string name="image">Image</string>

    <string name="your_favorite">Your Favorite</string>
    <string name="zonk">Zonk</string>
    <string name="search">Search</string>
    <string name="release_today_reminder">Release Today Reminder</string>
    <string name="release_today_desc">App will notify you about movies information that release today</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="daily_reminder_desc">Apps will notify you to Go Back using Movie Catalogue</string>
    <string name="reminder">Reminder</string>

    <string name="notify_release">This Movie Has Release Today</string>
    <string name="notify_daily">really Love You, Please Come Back</string>

</resources>
